Create navigation menu

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-        
+    
+   
+    <nav>
+        <ul>
+        <li><a href="link">About us</a></li>
+        <li><a href="link">Skills</a></li>
+        <li><a href="link">Portfolio</a></li>
+        <li><a href="link">Contact</a></li>
+        </nav>
+
 </body>
 </html>
