Section about us

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-   
+   <!--Navigation Menu-->
     <nav>
         <ul>
         <li><a href="link">About us</a></li>
@@ -16,6 +16,15 @@
         <li><a href="link">Portfolio</a></li>
         <li><a href="link">Contact</a></li>
         </nav>
+
+
+    <!--Section About us-->
+    <h1>Nagłówek</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus corrupti, 
+        provident, culpa tempora impedit praesentium magni et sint earum libero odio laborum. 
+        Dolorem, tenetur ut voluptas error pariatur placeat incidunt.</p>
+
+
 
 </body>
 </html>
