--- a/index.html
+++ b/index.html
@@ -19,10 +19,19 @@
 
 
     <!--Section About us-->
-    <h1>Nagłówek</h1>
+    <h1>Nagłówek 1</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus corrupti, 
         provident, culpa tempora impedit praesentium magni et sint earum libero odio laborum. 
         Dolorem, tenetur ut voluptas error pariatur placeat incidunt.</p>
+
+
+    <!--Section Skills-->
+ 
+    <div class="skill"><h2>Nagłówek 2</h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</div>
+    <div class="skill"><h2>Nagłówek 3</h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</div>
+    <div class="skill"><h2>Nagłówek 4</h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</div>
+    <div class="skill"><h2>Nagłówek 5</h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</div>
+   
 
 
 
