--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
     <div class="skill"><h2>Nagłówek 4</h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</div>
     <div class="skill"><h2>Nagłówek 5</h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</div>
    
-
+    <!--Section Portfolio-->
+    <h2>Nagłówek 6</h2>
+    <div class="portfolio-item"><img src="https://upload.wikimedia.org/wikipedia/commons/2/27/2019_Volvo_S60_01.jpg"alt="Volvo_s60"width=300px></div>
+    <div class="portfolio-item"><img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Volvo_S40_M_facelift_China_2012-04-29.jpg"alt="Volvo_s40"width=300px></div>
+    <div class="portfolio-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Volvo_S70_--_02-29-2012.JPG/420px-Volvo_S70_--_02-29-2012.JPG"alt="Volvo_s70"width=300px></div>
 
 
 </body>
