--- a/index.html
+++ b/index.html
@@ -38,6 +38,25 @@
     <div class="portfolio-item"><img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Volvo_S40_M_facelift_China_2012-04-29.jpg"alt="Volvo_s40"width=300px></div>
     <div class="portfolio-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Volvo_S70_--_02-29-2012.JPG/420px-Volvo_S70_--_02-29-2012.JPG"alt="Volvo_s70"width=300px></div>
 
+    <!--Section Contact-->
+    <h2>Grzegorz Nowakowski</h2>
+    <address>
+        Mozilla Foundation<br>
+        331 E Evelyn Ave<br>
+        Mountain View, CA 94041<br>
+        USA
+      </address>
 
+    <form action="/action_page.php">
+        <label for="fname">Imię:</label><br>
+        <input type="text" id="fname" name="fname" required><br>
+        <label for="lname">Temat:</label><br>
+        <input type="text" id="temat" name="temat" required><br>
+        <label for="lname">Wiadomość</label><br>
+        <textarea name="texarea" id="message" name="message" required></textarea><br>
+        <input type="submit" value="Wyślij">
+    </form>
+     
+    
 </body>
 </html>
